--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="container-fluid">
             <a class="navbar-brand text-light">Notes</a>
             <form class="d-flex">
-                <!-- <input class="form-control me-2" type="search" id="searchTxt" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-light" type="submit" id="searchBtn">Search</button> -->
+                <input class="form-control me-2" type="search" id="searchTxt" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light" type="submit" id="searchBtn">Search</button>
             </form>
         </div>
     </nav>
