--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <nav class="navbar navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Notes</a>
+          <a class="navbar-brand">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,7 +27,7 @@
             
             <form class="d-flex">
               <input class="form-control me-2" id="searchTxt" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success"  id="searchBtn" type="submit">Search</button>
+              <button class="btn btn-outline-light"  id="searchBtn" type="submit">Search</button>
             </form>
           </div>
         </div>
@@ -40,7 +40,7 @@
             <div class="card-body ">
                 <h5 class="card-title">Add notes</h5>
                 <div class="form-floating">
-                    <textarea class="form-control"  id="floatingTextarea"></textarea>
+                    <textarea class="form-control text-light"  id="floatingTextarea"></textarea>
                     <label for="floatingTextarea">Write your notes here</label>
                   </div>
 
